fix: fixing spacing

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  margin-top: 4rem;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
   background-color: transparent;
 }
